<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_profiles"
        android:icon="@drawable/ic_menu_profiles"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_users"
        android:icon="@drawable/ic_menu_users"
        android:title="@string/menu_users" />
    <item
        android:id="@+id/nav_language"
        android:title="@string/menu_language">
        <menu>
            <item
                android:id="@+id/nav_lang_en"
                android:checkable="true"
                android:title="@string/language_en" />
            <item
                android:id="@+id/nav_lang_ru"
                android:checkable="true"
                android:title="@string/language_ru" />
        </menu>
    </item>
</menu>
